# papers

./: BibTeXrefs.bib  Ecc.hpp  Ecc.jl  Main.jl  amuthesis.cls  masters thesis.tex  masters_thesis.tex  short.tex
Ecc/: .gitignore  Cargo.toml  build.py  install.bat  pyproject.toml
Ecc/ecc_py/: Cargo.toml  ecc_py.pyi
Ecc/ecc_py/src/: lib.rs  py_sdr_dataset.rs  util.rs
Ecc/py/accuracy_benchmarks/: predictive_coding_stacked8.py  soft_wta_U_equals_sk_minus_sj_expectation.py
Ecc/py/accuracy_benchmarks/results/: h2_k6s1c1d1_c49 params.txt  mnist data.npz
Ecc/py/convergence_tests/: common.py  conv_layer.py  convergence_test.py  single_layer.py  soft_wta_U_equals_abs_sk_minus_sj_expectation_given_sk_gt_sj.py  soft_wta_U_equals_l1_norm_of_s_expectation.py  soft_wta_U_equals_sk_minus_sj_expectation.py  soft_wta_U_equals_sk_minus_sj_expectation_given_sk_gt_sj.py  soft_wta_U_equals_sk_sj_expectation_given_sk_gt_sj.py  soft_wta_V_equals_1.py  stdp.py
Ecc/py/group_inference/: grouo_inference.py
Ecc/py/sfa/: env.py  sfa.py
Ecc/vf/: Cargo.toml
Ecc/vf/src/: arr_concat.rs  bezier.rs  blas_safe.rs  cayley.rs  collision.rs  conv.rs  conv_shape.rs  dot_arr.rs  dot_mad_arr.rs  dot_slice.rs  dot_sparse_arr.rs  dot_sparse_slice.rs  dynamic_layout.rs  ecc_layer.rs  ecc_machine.rs  from_usize.rs  histogram.rs  init.rs  init_rand.rs  layout.rs  lib.rs  lin_alg.rs  lin_trans.rs  line.rs  mat_arr.rs  mat_slice.rs  mat_tri.rs  mesh_primitives.rs  norm.rs  num.rs  piecewise_linear.rs  quat.rs  set.rs  shape.rs  shape_arr.rs  shaped_tensor_mad.rs  soft_wta.rs  static_layout.rs  top_k.rs  tup_arr.rs  (+7 more)
