[package]
name = "vf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rand = "0.8.4"
num-traits = "*"
itertools = "0.10.3"
more-asserts = "0.3.1"
levenshtein = "*"
statrs = "0.16"
num-complex = "*"
partial_sort = "0.1.2"
nalgebra = "0.32.2"